[package]
name = "ootk"
license = "AGPL-3.0-or-later"
version = "0.0.1"
readme = "README.md"
repository = "https://github.com/Th3Whit3Wolf/ootk"
homepage = "https://github.com/Th3Whit3Wolf/ootk"
documentation = "https://docs.rs/ootk/"
authors = [
    "Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>",
    "Theodore Kruczek <theodore.kruczek@gmail.com>",
]
edition = "2021"
keywords = ["sgp4", "orbit", "toolkit", "space", "satellite"]
description = "Orbital Object Toolkit including SGP4 Propagator and Coordinate Transforms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
